<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/signup_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

    <TextView
        android:id="@+id/signup_main_caption"
        android:layout_below="@+id/signup_bar"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_caption"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="16dp"
        />

    <TextView
        android:id="@+id/signup_nick_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_nick_caption"
        android:textSize="14sp"
        android:textColor="@color/colorGray"
        android:layout_below="@+id/signup_main_caption"
        android:padding="8dp"
        />

    <EditText
        android:id="@+id/signup_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@+id/signup_nick_caption"
        android:hint="nickname"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/signin_log_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_login"
        android:textSize="14sp"
        android:textColor="@color/colorGray"
        android:layout_below="@+id/signup_nickname"
        android:padding="8dp"
        />

    <EditText
        android:id="@+id/signup_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@+id/signin_log_caption"
        android:hint="login"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/signin_pass_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_pass"
        android:textSize="14sp"
        android:textColor="@color/colorGray"
        android:padding="8dp"
        android:layout_below="@+id/signup_login"
        />

    <EditText
        android:id="@+id/signup_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@+id/signin_pass_caption"
        android:hint="password"
        android:textAlignment="center"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup_reg_action"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/signup_auth_action"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />


</RelativeLayout>